--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ header {
 
 .container {
   text-align: center;
+  width: 90%;
+  margin: 0 auto;
 }
 
 .title {
@@ -52,3 +54,57 @@ header {
   padding-top: 10px;
 }
 
+.heading {
+  padding-top: 90px;
+  text-align: center;
+  font-size: 32px;
+}
+
+.heading-text {
+  padding-top: 30px;
+  text-align: center;
+  font-size: 16px;
+}
+
+.portfolio {
+  background-color: #ECEFF1;
+}
+
+.production-group {
+  display: flex;
+  flex-flow: row wrap;
+  padding: 30px 0 90px 0;
+}
+
+.production {
+  margin-right: 10px 10px 0 0;
+  width: 300px;
+  height: 250px;
+  background-size: cover;
+  background-position: center;
+}
+
+.bg1 {
+  background-image: url(img/sketch.jpn);
+}
+.bg2 {
+  background-image: url(img/websuku.jpn);
+}
+.bg3 {
+  background-image: url(img/write.jpn);
+}
+.bg4 {
+  background-image: url(img/webcamp.jpn);
+}
+.bg5 {
+  background-image: url(img/talk.jpn);
+}
+.bg6 {
+  background-image: url(img/webcamp-mother.jpn);
+}
+
+.strength-group {
+  display: flex;
+  padding: 30px 0 90px 0;
+  margin: 0 auto;
+}
