--- a/style.css
+++ b/style.css
@@ -108,3 +108,12 @@ header {
   padding: 30px 0 90px 0;
   margin: 0 auto;
 }
+
+.strength {
+  margin-right: 10px;
+}
+
+.icon {
+  font-size: 60px;
+}
+
