--- a/style.css
+++ b/style.css
@@ -77,30 +77,11 @@ header {
 }
 
 .production {
-  margin-right: 10px 10px 0 0;
+  margin: 10px 10px 0 0;
   width: 300px;
   height: 250px;
   background-size: cover;
   background-position: center;
-}
-
-.bg1 {
-  background-image: url(img/sketch.jpn);
-}
-.bg2 {
-  background-image: url(img/websuku.jpn);
-}
-.bg3 {
-  background-image: url(img/write.jpn);
-}
-.bg4 {
-  background-image: url(img/webcamp.jpn);
-}
-.bg5 {
-  background-image: url(img/talk.jpn);
-}
-.bg6 {
-  background-image: url(img/webcamp-mother.jpn);
 }
 
 .strength-group {
@@ -117,3 +98,61 @@ header {
   font-size: 60px;
 }
 
+.profile {
+  background-color: #ECEFF1;
+}
+
+.profile-group {
+  text-align: center;
+  display: flex;
+  padding: 30px 0 90px 0;
+}
+
+.left-content {
+  width: 50%;
+}
+
+.profile-image {
+  /*margin-bottom: 30px*/
+  width: 250px;
+  height: 250px;
+  margin: 0 auto;
+  border-radius: 50%;
+}
+
+.right-content {
+  width: 50%;
+}
+
+.description-title {
+  margin: 20px 0 5px 0;
+  font-size: 20px;
+}
+
+.contact-group {
+  display: flex;
+  padding: 30px 0 90px 0;
+}
+
+.left-contact {
+  width: 50%;
+}
+
+.right-contact {
+  width: 50%;
+}
+
+.sns-icon {
+  font-size: 50px;
+}
+
+.copyright {
+  font-size: 16px;
+  text-align: center;
+  color: #fafafa;
+}
+
+footer {
+  background-color: #EC715F;
+  line-height: 60px;
+}
